fix app overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -63,24 +63,16 @@ h1 {
     margin: 5px;
   }
 }
+
 @media (max-width: 650px) {
   h1 {
     margin: 10px 0;
   }
   .card {
-    width: 100px;
+    width: 70px;
     height: 50px;
     font-size: 2.5rem;
     margin: 5px;
-  }
-  .card_list {
-    flex-direction: column;
-  }
-}
-@media (max-width: 650px) {
-  .card {
-    width: 70px;
-    height: 50px;
   }
   .card_list {
     flex-direction: column;
